--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "finmoney"
-version = "1.0.4"
+version = "1.0.5"
 edition = "2024"
 authors = ["Your Name <mixme2@gmail.com>"]
 description = "A precise, panic-free money library for Rust with currency-aware values, configurable rounding, and exchange-grade tick handling"
@@ -24,12 +24,11 @@ include = [
 ]
 rust-version = "1.85"
 
-
 [profile.release]
 codegen-units = 1
 lto = "fat"
 opt-level = 3
-#panic = "abort"
+panic = "abort"
 strip = "symbols"
 
 [profile.dev]
@@ -37,8 +36,8 @@ opt-level = 1
 debug = true
 
 [dependencies]
-rust_decimal = { version = "1.39.0", features = ["maths"] }
-rust_decimal_macros = "1.39.0"
+rust_decimal = { version = "1.40.0", features = ["maths"] }
+rust_decimal_macros = "1.40.0"
 tinystr = { version = "0.8.2", features = ["serde"] }
 serde = { version = "1.0.228", features = ["derive"], optional = true }
 
